added mobile nav menu

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="nl">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,26 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Tafelvoetbalclinics</title>
 </head>
+
 <body>
-    
+    <header>
+        <h1 class="logo">Tafelvoetbalclinics</h1>
+        <input type="checkbox" class="nav-toggle" id="nav-toggle">
+        <nav>
+
+            <ul>
+                <li><a href="#wiezijnwie">Wie zijn wie?</a></li>
+                <li><a href="#clinics">Clinics</a></li>
+                <li><a href="#verhuur">Verhuur</a></li>
+                <li><a href="#evenementen">Evenementen</a></li>
+                <li><a href="#referenties">Referenties</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+        <label for="nav-toggle" class="nav-toggle-label">
+            <span></span>
+        </label>
+    </header>
 </body>
+
 </html>
