--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
+
+    <!-- fonts -->
+    <link href="https://fonts.googelapis.com/css?family=Fredoka+One|Roboto&display=swap" rel=stylesheet>
+
     <title>Tafelvoetbalclinics</title>
 </head>
 
