--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
 
     <!-- fonts -->
-    <link href="https://fonts.googelapis.com/css?family=Fredoka+One|Roboto&display=swap" rel=stylesheet>
+    <link href="https://fonts.googleapis.com/css?family=Fredoka+One|Roboto&display=swap" rel="stylesheet">
 
     <title>Tafelvoetbalclinics</title>
 </head>
@@ -18,7 +18,6 @@
         <h1 class="logo">Tafelvoetbalclinics</h1>
         <input type="checkbox" class="nav-toggle" id="nav-toggle">
         <nav>
-
             <ul>
                 <li><a href="#wiezijnwie">Wie zijn wie?</a></li>
                 <li><a href="#clinics">Clinics</a></li>
@@ -30,6 +29,9 @@
         </nav>
         <label for="nav-toggle" class="nav-toggle-label">
             <span></span>
+        </label>
+        <label for="nav-toggle" class="nav-toggle-lable-close">
+            <span>X</span>
         </label>
     </header>
 </body>
