--- a/index.html
+++ b/index.html
@@ -30,8 +30,11 @@
         <label for="nav-toggle" class="nav-toggle-label">
             <span></span>
         </label>
-        <label for="nav-toggle" class="nav-toggle-lable-close">
-            <span>X</span>
+        <label for="nav-toggle" class="nav-toggle-label-close-45">
+            <span></span>
+        </label>
+        <label for="nav-toggle" class="nav-toggle-label-close-neg45">
+            <span></span>
         </label>
     </header>
 </body>
