completed home page for mobile screen sizes

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
 
     <!-- fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Fredoka+One|Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Fredoka+One%7cRoboto&display=swap" rel="stylesheet">
 
     <title>Tafelvoetbalclinics</title>
 </head>
@@ -19,7 +19,7 @@
         <input type="checkbox" class="nav-toggle" id="nav-toggle">
         <nav>
             <ul>
-                <li><a href="#wiezijnwie">Wie zijn wie?</a></li>
+                <li><a href="#wiezijnwij">Wie zijn wij?</a></li>
                 <li><a href="#clinics">Clinics</a></li>
                 <li><a href="#verhuur">Verhuur</a></li>
                 <li><a href="#evenementen">Evenementen</a></li>
@@ -37,6 +37,27 @@
             <span></span>
         </label>
     </header>
+
+    <main>
+        <section id="home">
+            <figure>
+                <img class="home-banner" src="/images/tafelvoetbalclinics-landing-page-image.jpg"
+                    alt="home banner shows people playing foosball on leonhart foosball table">
+            </figure>
+            <article>
+                <h2 class="home-title">Wilt u instructies en les krijgen van professionele spelers?</h2>
+                <p class="home-text">Wilt u lol maken tijdens een bedrijfsuitje? Al uw wensen kunnen wij voor U in
+                    vervulling laten gaan.
+                    Vele jaren hebben wij ervaring op het gebied van tafelvoetbal en events. Door heel Nederland kunnen
+                    wij clinics geven en organiseren.
+                    Kijkt u rustig rond op onze website en twijfel niet om contact op te nemen. Wij leveren werkelijk
+                    alles wat u nodig heeft voor uw event!</p>
+            </article>
+            <div class="learn-more-container">
+                <a class="learn-more-button" href="#wiezijnwij">Lees Meer</a>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
