added html content of wie zij wij

--- a/index.html
+++ b/index.html
@@ -57,6 +57,14 @@
                 <a class="learn-more-button" href="#wiezijnwij">Lees Meer</a>
             </div>
         </section>
+
+        <section id="wiezijnwij">
+            <h2 class="section-heading">WIE ZIJN WIJ</h2>
+            <article>
+                <h3 class="article-heading">Wij zijn twee liefhebbers van de sport tafelvoetbal.</h3>
+                <p class="article-text">Inmiddels hebben we geparticipeerd bij vele toernooien zowel in als buiten Nederland. Dit zijn toernooien met officiële regels, rankings en spelers. Naast het spelen van grote toernooien willen wij graag meer halen uit onze passie. Al meer dan 10 jaar organiseren wij middels andere wegen toernooien, bedrijfsfeesten en andere gerelateerde events. Met al deze ervaring en kennis zijn wij goed op de hoogte over de zaken die er nodig zijn om u een zeer geslaagde dag te laten beleven. Wij hopen op zeer korte termijn deze passie met u te kunnen beleven. Tot snel!</p>
+            </article>
+        </section>
     </main>
 </body>
 
