--- a/index.html
+++ b/index.html
@@ -47,10 +47,12 @@
             <article>
                 <h2 class="home-title">Wilt u instructies en les krijgen van professionele spelers?</h2>
                 <p class="home-text">Wilt u lol maken tijdens een bedrijfsuitje? Al uw wensen kunnen wij voor U in
-                    vervulling laten gaan.
+                    vervulling laten gaan.</p>
+                <p class="home-text">
                     Vele jaren hebben wij ervaring op het gebied van tafelvoetbal en events. Door heel Nederland kunnen
-                    wij clinics geven en organiseren.
-                    Kijkt u rustig rond op onze website en twijfel niet om contact op te nemen. Wij leveren werkelijk
+                    wij clinics geven en organiseren.</p>
+                <p class="home-text">Kijkt u rustig rond op onze website en twijfel niet om contact op te nemen. Wij
+                    leveren werkelijk
                     alles wat u nodig heeft voor uw event!</p>
             </article>
             <div class="learn-more-container">
@@ -62,7 +64,12 @@
             <h2 class="section-heading">WIE ZIJN WIJ</h2>
             <article>
                 <h3 class="article-heading">Wij zijn twee liefhebbers van de sport tafelvoetbal.</h3>
-                <p class="article-text">Inmiddels hebben we geparticipeerd bij vele toernooien zowel in als buiten Nederland. Dit zijn toernooien met officiële regels, rankings en spelers. Naast het spelen van grote toernooien willen wij graag meer halen uit onze passie. Al meer dan 10 jaar organiseren wij middels andere wegen toernooien, bedrijfsfeesten en andere gerelateerde events. Met al deze ervaring en kennis zijn wij goed op de hoogte over de zaken die er nodig zijn om u een zeer geslaagde dag te laten beleven. Wij hopen op zeer korte termijn deze passie met u te kunnen beleven. Tot snel!</p>
+                <p class="article-text">Inmiddels hebben we geparticipeerd bij vele toernooien zowel in als buiten
+                    Nederland. Dit zijn toernooien met officiële regels, rankings en spelers. Naast het spelen van grote
+                    toernooien willen wij graag meer halen uit onze passie. Al meer dan 10 jaar organiseren wij middels
+                    andere wegen toernooien, bedrijfsfeesten en andere gerelateerde events. Met al deze ervaring en
+                    kennis zijn wij goed op de hoogte over de zaken die er nodig zijn om u een zeer geslaagde dag te
+                    laten beleven. Wij hopen op zeer korte termijn deze passie met u te kunnen beleven. Tot snel!</p>
             </article>
         </section>
     </main>
