styled the wiezijwij section

--- a/index.html
+++ b/index.html
@@ -38,30 +38,30 @@
         </label>
     </header>
 
-    <main>
-        <section id="home">
-            <figure>
-                <img class="home-banner" src="/images/tafelvoetbalclinics-landing-page-image.jpg"
-                    alt="home banner shows people playing foosball on leonhart foosball table">
-            </figure>
-            <article>
-                <h2 class="home-title">Wilt u instructies en les krijgen van professionele spelers?</h2>
-                <p class="home-text">Wilt u lol maken tijdens een bedrijfsuitje? Al uw wensen kunnen wij voor U in
-                    vervulling laten gaan.</p>
-                <p class="home-text">
-                    Vele jaren hebben wij ervaring op het gebied van tafelvoetbal en events. Door heel Nederland kunnen
-                    wij clinics geven en organiseren.</p>
-                <p class="home-text">Kijkt u rustig rond op onze website en twijfel niet om contact op te nemen. Wij
-                    leveren werkelijk
-                    alles wat u nodig heeft voor uw event!</p>
-            </article>
-            <div class="learn-more-container">
-                <a class="learn-more-button" href="#wiezijnwij">Lees Meer</a>
-            </div>
-        </section>
+    <section id="home">
+        <figure>
+            <img class="home-banner" src="/images/tafelvoetbalclinics-landing-page-image.jpg"
+                alt="home banner shows people playing foosball on leonhart foosball table">
+        </figure>
+        <article>
+            <h2 class="home-title">Wilt u instructies en les krijgen van professionele spelers?</h2>
+            <p class="home-text">Wilt u lol maken tijdens een bedrijfsuitje? Al uw wensen kunnen wij voor U in
+                vervulling laten gaan.</p>
+            <p class="home-text">
+                Vele jaren hebben wij ervaring op het gebied van tafelvoetbal en events. Door heel Nederland kunnen
+                wij clinics geven en organiseren.</p>
+            <p class="home-text">Kijkt u rustig rond op onze website en twijfel niet om contact op te nemen. Wij
+                leveren werkelijk
+                alles wat u nodig heeft voor uw event!</p>
+        </article>
+        <div class="learn-more-container">
+            <a class="learn-more-button" href="#wiezijnwij">Lees Meer</a>
+        </div>
+    </section>
 
+    <main>
         <section id="wiezijnwij">
-            <h2 class="section-heading">WIE ZIJN WIJ</h2>
+            <h2 class="section-heading">WIE ZIJN WIJ?</h2>
             <article>
                 <h3 class="article-heading">Wij zijn twee liefhebbers van de sport tafelvoetbal.</h3>
                 <p class="article-text">Inmiddels hebben we geparticipeerd bij vele toernooien zowel in als buiten
