added all services sections and fixed layout issue

--- a/index.html
+++ b/index.html
@@ -76,9 +76,36 @@
             <h2 class="section-heading">CLINICS</h2>
             <article>
                 <h3 class="article-heading">Wilt u instructies en les krijgen van professionele spelers?</h3>
-                <p class="article-text">Wilt u uw skills verbeteren, om eindelijk die vervelend goede collega te kunnen verslaan? Wilt u lol maken tijdens een bedrijfsuitje met een grote tafelvoetbal voor 22 personen?  Of zou u onderling met uw bedrijf eens willen uitmaken wie nou eigenlijk de beste is?</p>
-                <p class="article-text">Zou u een eindelijk eens een keer een professionele tafel willen huren die bespeeld wordt door de beste spelers ter wereld? Het maakt allemaal niet uit bij ons, werkelijk alles op gebied van tafelvoetbal is mogelijk bij ons!</p>
-                <p class="article-text">Kijkt u gerust eens rond op onze website en twijfel niet om contact met ons op te nemen, als u een boeking wilt maken of voor andere vragen. Wij leveren werkelijk alles wat u nodig heeft voor uw event!</p>
+                <p class="article-text">Wilt u uw skills verbeteren, om eindelijk die vervelend goede collega te kunnen
+                    verslaan? Wilt u lol maken tijdens een bedrijfsuitje met een grote tafelvoetbal voor 22 personen? Of
+                    zou u onderling met uw bedrijf eens willen uitmaken wie nou eigenlijk de beste is?</p>
+                <p class="article-text">Zou u een eindelijk eens een keer een professionele tafel willen huren die
+                    bespeeld wordt door de beste spelers ter wereld? Het maakt allemaal niet uit bij ons, werkelijk
+                    alles op gebied van tafelvoetbal is mogelijk bij ons!</p>
+                <p class="article-text">Kijkt u gerust eens rond op onze website en twijfel niet om contact met ons op
+                    te nemen, als u een boeking wilt maken of voor andere vragen. Wij leveren werkelijk alles wat u
+                    nodig heeft voor uw event!</p>
+            </article>
+        </section>
+        <section id="verhuur">
+            <h2 class="section-heading">VERHUUR</h2>
+            <article>
+                <h3 class="article-heading">Wilt u een professionele tafelvoetbal huren?</h3>
+                <p class="article-text">Heeft u interesse in de toernooitafel?</p>
+            </article>
+        </section>
+        <section id="evenementen">
+            <h2 class="section-heading">EVENEMENTEN</h2>
+            <article>
+                <h3 class="article-heading">Wilt u instructies en les krijgen van professionele spelers?</h3>
+                <p class="article-text">Wilt u lol maken tijdens een bedrijfsuitje? Al uw wensen kunnen wij voor U in
+                    vervulling laten gaan.</p>
+                <p class="article-text">Vele jaren hebben wij ervaring op het gebied van tafelvoetbal en events. Door
+                    heel Nederland kunnen
+                    wij clinics geven en organiseren.</p>
+                <p class="article-text">Kijkt u rustig rond op onze website en twijfel niet om contact op te nemen. Wij
+                    leveren werkelijk
+                    alles wat u nodig heeft voor uw event!</p>
             </article>
         </section>
     </main>
