added reference section for mobile and added reference images folder

--- a/index.html
+++ b/index.html
@@ -108,6 +108,19 @@
                     alles wat u nodig heeft voor uw event!</p>
             </article>
         </section>
+        <section id="referenties">
+            <h2 class="section-heading">REFERENTIES</h2>
+            <figure class="ref-img"><img src="/images/references/ref-img-1.png" alt="shell logo"></figure>
+            <figure class="ref-img"><img src="/images/references/ref-img-2.png" alt=""></figure>
+            <figure class="ref-img"><img src="/images/references/ref-img-3.png" alt=""></figure>
+            <figure class="ref-img"><img src="/images/references/ref-img-4.png" alt=""></figure>
+            <figure class="ref-img"><img src="/images/references/ref-img-5.png" alt=""></figure>
+            <figure class="ref-img"><img src="/images/references/ref-img-6.png" alt=""></figure>
+            <figure class="ref-img"><img src="/images/references/ref-img-7.jpg" alt=""></figure>
+            <figure class="ref-img"><img src="/images/references/ref-img-8.png" alt=""></figure>
+            <figure class="ref-img"><img src="/images/references/ref-img-9.jpg" alt=""></figure>
+            <figure class="ref-img"><img src="/images/references/ref-img-10.png" alt=""></figure>
+        </section>
     </main>
 </body>
 
