added contact section

--- a/index.html
+++ b/index.html
@@ -121,6 +121,24 @@
             <figure class="ref-img"><img src="/images/references/ref-img-9.jpg" alt=""></figure>
             <figure class="ref-img"><img src="/images/references/ref-img-10.png" alt=""></figure>
         </section>
+        <section id="contact">
+            <h2 class="section-heading">CONTACT</h2>
+            <form>
+                <label for="name">Naam<span class="form-required">*</span></label><br>
+                <input type="text" name="name" id="name" required><br>
+
+                <label for="email">Email<span class="form-required">*</span></label><br>
+                <input type="text" name="email" id="email" required><br>
+
+                <label for="phone-number">Telefonenummer</label><br>
+                <input type="number" name="phone-number" id="phone-number" maxlength="14"><br>
+
+                <label for="message">Bericht</label><br>
+                <textarea name="message" id="message" cols="20" rows="10"></textarea><br>
+
+                <input type="submit" value="Verstuur">
+            </form>
+        </section>
     </main>
 </body>
 
