--- a/index.html
+++ b/index.html
@@ -140,6 +140,18 @@
             </form>
         </section>
     </main>
+    <footer>
+        <div class="contact-info">
+            <h3 class="footer-contact-heading">Contact</h3>
+            <p class="contact-number">phone icon : <span class="contact-info-text"></span></p>
+            <p class="contact-email">email icon : <span class="contact-info-text"></span></p>
+        </div>
+        <div class="socials">
+            <h3 class="socials-head">Volg Ons</h3>
+            <a href="#facebook">Facebook icon</a>
+            <a href="#instagram">Instagram icon</a>
+        </div>
+    </footer>
 </body>
 
 </html>
