--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 <input type="text" name="email" id="email" required><br>
 
                 <label for="phone-number">Telefonenummer</label><br>
-                <input type="number" name="phone-number" id="phone-number" maxlength="14"><br>
+                <input type="number" name="phone-number" id="phone-number"><br>
 
                 <label for="message">Bericht</label><br>
                 <textarea name="message" id="message" cols="20" rows="10"></textarea><br>
