--- a/index.html
+++ b/index.html
@@ -70,6 +70,23 @@
                     andere wegen toernooien, bedrijfsfeesten en andere gerelateerde events. Met al deze ervaring en
                     kennis zijn wij goed op de hoogte over de zaken die er nodig zijn om u een zeer geslaagde dag te
                     laten beleven. Wij hopen op zeer korte termijn deze passie met u te kunnen beleven. Tot snel!</p>
+                <h3 class="article-heading">Palmares</h3>
+                <ul>
+                    <li>2019 Top 10 Ranking 1ste Bundesliga (hoogeste afdeling internationale competitie ter wereld)</li>
+                    <li>2018 Promotie naar 1ste Bundesliga</li>
+                    <li>2018 Nederlands kampioen</li>
+                    <li>2018 Kampioen Landesliga NRW</li>
+                    <li>2018 Kampioen TBNL competitie</li>
+                    <li>2017 Kampioen Verbandsliga</li>
+                    <li>2016 2de plek Rotterdam Masters</li>
+                    <li>2016 Wereldkampioen tafelvoetbal Draw your Partner discipline</li>
+                    <li>2016 Top 50 Rank van de wereld</li>
+                    <li>2016 Hoogst gerankte Nederlandse speler</li>
+                    <li>2016 Top 5 Rank op Tornado INTERNATIONAL series</li>
+                    <li>2015 3de plek Nederlands Team op WK Tafelvoetbal</li>
+                    <li>2014 Debuut Nederlands Team</li>
+                    <li>2014 Top 15 ranking op WK tafelvoetbal in dubbels</li>
+                </ul>
             </article>
         </section>
         <section id="clinics">
