added markup for back to top button

--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
             <a href="#instagram">Instagram icon</a>
         </div>
     </footer>
+    <div class="back-to-top"><button onclick="backToTop()" id="back-to-top">terug naar boven</button></div>
 </body>
 
 </html>
