--- a/index.html
+++ b/index.html
@@ -181,7 +181,10 @@
             <a href="#instagram">Instagram icon</a>
         </div>
     </footer>
-    <div class="back-to-top"><button onclick="backToTop()" id="back-to-top">terug naar boven</button></div>
-</body>
+    <div class="back-to-top"><a id="back-to-top" href="#home">TOP</a></div>
+
+    <script src="/js/script.js"></script>
+
+</body> 
 
 </html>
