--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
 
     <!-- fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Fredoka+One%7cRoboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Teko&display=swap" rel="stylesheet">
 
     <title>Tafelvoetbalclinics</title>
 </head>
