fixed back to top href link from home to logo so logo is visible after clicking the button

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <h1 class="logo">Tafelvoetbalclinics</h1>
+        <h1 class="logo" id="logo">Tafelvoetbalclinics</h1>
         <input type="checkbox" class="nav-toggle" id="nav-toggle">
         <nav>
             <ul>
@@ -181,7 +181,7 @@
             <a href="#instagram">Instagram icon</a>
         </div>
     </footer>
-    <div class="back-to-top"><a id="back-to-top" href="#home">TOP</a></div>
+    <div class="back-to-top"><a id="back-to-top" href="#logo">TOP</a></div>
 
     <script src="/js/script.js"></script>
 
