smooth scroll implemented

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <input type="checkbox" class="nav-toggle" id="nav-toggle">
         <nav>
             <ul>
-                <li><a href="#wiezijnwij">Wie zijn wij?</a></li>
+                <li><a href="#wiezijnwij" id="wiezijnwijbutton">Wie zijn wij?</a></li>
                 <li><a href="#palmares">Palmares</a></li>
                 <li><a href="#clinics">Clinics</a></li>
                 <li><a href="#verhuur">Verhuur</a></li>
@@ -79,7 +79,8 @@
                 <h3 class="article-heading">Onze Palmares</h3>
                 <ul>
                     <h4 class="article-heading">2019</h4>
-                    <li>2019 Top 10 Ranking 1ste Bundesliga (hoogeste afdeling internationale competitie ter wereld)</li>
+                    <li>2019 Top 10 Ranking 1ste Bundesliga (hoogeste afdeling internationale competitie ter wereld)
+                    </li>
                     <h4 class="article-heading">2018</h4>
                     <li>2018 Promotie naar 1ste Bundesliga</li>
                     <li>2018 Nederlands kampioen</li>
@@ -183,8 +184,16 @@
     </footer>
     <div class="back-to-top"><a id="back-to-top" href="#logo">TOP</a></div>
 
+
+    <!-- Scripts -->
+    
+    <!-- JQuery -->
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    
     <script src="/js/script.js"></script>
 
-</body> 
+
+</body>
 
 </html>
