form styling for mobile completed

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <!-- fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto|Teko&display=swap" rel="stylesheet">
 
+    <!-- font awsome -->
+    <script src="https://kit.fontawesome.com/14dd80b03a.js" crossorigin="anonymous"></script>
+
     <title>Tafelvoetbalclinics</title>
 </head>
 
@@ -160,37 +163,42 @@
                 <label for="email">Email<span class="form-required">*</span></label><br>
                 <input type="text" name="email" id="email" required><br>
 
+                <label for="company">Bedrijf</label><br>
+                <input type="text" name="company" id="company"><br>
+
+
                 <label for="phone-number">Telefonenummer</label><br>
                 <input type="number" name="phone-number" id="phone-number"><br>
 
                 <label for="message">Bericht</label><br>
                 <textarea name="message" id="message" cols="20" rows="10"></textarea><br>
 
-                <input type="submit" value="Verstuur">
+                <input type="submit" value="VERSTUUR">
             </form>
+            <hr class="contact-form-seperator">
+            <div class="contact-info">
+                <p><i class="fas fa-phone-alt"></i> <a href="tel:+31623560875">+31623560875</a></p>
+                <p><i class="fas fa-envelope"></i><a
+                        href="mailto:info@tafelvoetbalclinics.nl">info@tafelvoetbalclinics.nl</a></p>
+            </div>
+            <div class="socials">
+                <h3 class="socials-head">Volg Ons</h3>
+                <a href="#facebook"><i class="fab fa-facebook-square fa-4x"></i></a>
+                <a href="#instagram"><i class="fab fa-instagram fa-4x"></i></a>
+            </div>
         </section>
     </main>
     <footer>
-        <div class="contact-info">
-            <h3 class="footer-contact-heading">Contact</h3>
-            <p class="contact-number">phone icon : <span class="contact-info-text"></span></p>
-            <p class="contact-email">email icon : <span class="contact-info-text"></span></p>
-        </div>
-        <div class="socials">
-            <h3 class="socials-head">Volg Ons</h3>
-            <a href="#facebook">Facebook icon</a>
-            <a href="#instagram">Instagram icon</a>
-        </div>
     </footer>
     <div class="back-to-top"><a id="back-to-top" href="#logo">TOP</a></div>
 
 
     <!-- Scripts -->
-    
+
     <!-- JQuery -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    
+
     <script src="/js/script.js"></script>
 
 
