--- a/index.html
+++ b/index.html
@@ -188,8 +188,7 @@
             </div>
         </section>
     </main>
-    <footer>
-    </footer>
+    <footer>&copy; Copyright 2020 Tafelvoetbalclinics</footer>
     <div class="back-to-top"><a id="back-to-top" href="#logo">TOP</a></div>
 
 
