--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <input type="checkbox" class="nav-toggle" id="nav-toggle">
         <nav>
             <ul>
-                <li><a href="#wiezijnwij" id="wiezijnwijbutton">Wie zijn wij?</a></li>
+                <li><a href="#wiezijnwij">Wie zijn wij?</a></li>
                 <li><a href="#palmares">Palmares</a></li>
                 <li><a href="#clinics">Clinics</a></li>
                 <li><a href="#verhuur">Verhuur</a></li>
