changed back to top from text to arrow and changed the opacity of button

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
         </section>
     </main>
     <footer>&copy; Copyright 2020 Tafelvoetbalclinics</footer>
-    <div class="back-to-top"><a id="back-to-top" href="#logo">TOP</a></div>
+    <div class="back-to-top"><a id="back-to-top" href="#logo"><i class="fas fa-caret-square-up fa-3x"></i></a></div>
 
 
     <!-- Scripts -->
