added clinics packages html

--- a/index.html
+++ b/index.html
@@ -119,6 +119,41 @@
                     te nemen, als u een boeking wilt maken of voor andere vragen. Wij leveren werkelijk alles wat u
                     nodig heeft voor uw event!</p>
             </article>
+            <div class="clinics-packages">
+                <div class="package-card package-1">
+                    <h3>package 1</h3>
+                    <ul class="package-features">
+                        <li>feature 1</li>
+                        <li>feature 2</li>
+                        <li>feature 3</li>
+                        <li>feature 4</li>
+                    </ul>
+                    <span class="package-price">&euro; 100</span>
+                    <a class="buy-package-button" href="#">KOPEN</a>
+                </div>
+                <div class="package-card package-2">
+                    <h3>Package 2</h3>
+                    <ul class="package-features">
+                        <li>feature 1</li>
+                        <li>feature 2</li>
+                        <li>feature 3</li>
+                        <li>feature 4</li>
+                    </ul>
+                    <span class="package-price">&euro; 200</span>
+                    <a class="buy-package-button" href="#">KOPEN</a>
+                </div>
+                <div class="package-card package-3">
+                    <h3>Package 3</h3>
+                    <ul class="package-features">
+                        <li>feature 1</li>
+                        <li>feature 2</li>
+                        <li>feature 3</li>
+                        <li>feature 4</li>
+                    </ul>
+                    <span class="package-price">&euro; 300</span>
+                    <a class="buy-package-button" href="#">KOPEN</a>
+                </div>
+            </div>
         </section>
         <section id="verhuur">
             <h2 class="section-heading">VERHUUR</h2>
