added prices on packages card

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                         <li>feature 3</li>
                         <li>feature 4</li>
                     </ul>
-                    <span class="package-price">&euro; 100</span>
+                    <span class="package-price">&euro; 100 <sub>/ sessie</sub></span>
                     <a class="buy-package-button" href="#">KOPEN</a>
                 </div>
                 <div class="package-card package-2">
@@ -139,7 +139,7 @@
                         <li>feature 3</li>
                         <li>feature 4</li>
                     </ul>
-                    <span class="package-price">&euro; 200</span>
+                    <span class="package-price">&euro; 200 <sub>/ sessie</sub></span>
                     <a class="buy-package-button" href="#">KOPEN</a>
                 </div>
                 <div class="package-card package-3">
@@ -150,7 +150,7 @@
                         <li>feature 3</li>
                         <li>feature 4</li>
                     </ul>
-                    <span class="package-price">&euro; 300</span>
+                    <span class="package-price">&euro; 300 <sub>/ sessie</sub></span>
                     <a class="buy-package-button" href="#">KOPEN</a>
                 </div>
             </div>
