updated html for package-1

--- a/index.html
+++ b/index.html
@@ -121,15 +121,16 @@
             </article>
             <div class="clinics-packages">
                 <div class="package-card package-1">
-                    <h3>package 1</h3>
+                    <h3>Basis</h3>
                     <ul class="package-features">
-                        <li>feature 1</li>
-                        <li>feature 2</li>
-                        <li>feature 3</li>
-                        <li>feature 4</li>
+                        <li>Techniektraining</li>
+                        <li>Balcontrole</li>
+                        <li>Passen</li>
+                        <li>Schieten</li>
                     </ul>
-                    <span class="package-price">&euro; 100 <sub>/ sessie</sub></span>
-                    <a class="buy-package-button" href="#">KOPEN</a>
+                    <span class="package-price">&euro;85 <sub>/ uur</sub></span><br>
+                    <span class="package-extra-info">+ &euro;65 extra uur </span><br>
+                    <a class="buy-package-button" href="#contact">contact op om een afspraak te boeken</a>
                 </div>
                 <div class="package-card package-2">
                     <h3>Package 2</h3>
