updated html for package2 and package 3

--- a/index.html
+++ b/index.html
@@ -133,26 +133,26 @@
                     <a class="buy-package-button" href="#contact">contact op om een afspraak te boeken</a>
                 </div>
                 <div class="package-card package-2">
-                    <h3>Package 2</h3>
+                    <h3>Uitgebreid</h3>
                     <ul class="package-features">
-                        <li>feature 1</li>
-                        <li>feature 2</li>
-                        <li>feature 3</li>
-                        <li>feature 4</li>
+                        <li>Strategie</li>
+                        <li>Verdediging</li>
+                        <li><span class="package-1-addition">+ Basis</span></li>
                     </ul>
-                    <span class="package-price">&euro; 200 <sub>/ sessie</sub></span>
-                    <a class="buy-package-button" href="#">KOPEN</a>
+                    <span class="package-price">&euro;180 <sub>/ 2 uur</sub></span>
+                    <span class="package-extra-info"> Minimaal 2 uur </span><br>
+                    <a class="buy-package-button" href="#contact">contact op om een afspraak te boeken</a>
                 </div>
                 <div class="package-card package-3">
-                    <h3>Package 3</h3>
+                    <h3>Toernooi</h3>
                     <ul class="package-features">
-                        <li>feature 1</li>
-                        <li>feature 2</li>
-                        <li>feature 3</li>
-                        <li>feature 4</li>
+                        <li><span class="package-1-addition">+ Basis</span></li>
+                        <li><span class="package-2-addition">+ Uitgebreid</span></li>
+                        <li>Inclusief een <span class="beat-the-pro">Beat The Pro</span></li>
                     </ul>
-                    <span class="package-price">&euro; 300 <sub>/ sessie</sub></span>
-                    <a class="buy-package-button" href="#">KOPEN</a>
+                    <span class="package-price">&euro;500 <sub>/ dagdeel</sub></span>
+                    <span class="package-extra-info"> dagdeel is 4 uur </span><br>
+                    <a class="buy-package-button" href="#contact">contact op om een afspraak te boeken</a>
                 </div>
             </div>
         </section>
