updated packages pricing html, moved the html to top of the card

--- a/index.html
+++ b/index.html
@@ -122,35 +122,35 @@
             <div class="clinics-packages">
                 <div class="package-card package-1">
                     <h3>Basis</h3>
+                    <span class="prices"><span class="package-price">&euro;85 </span><sub>/ uur</sub></span>
                     <ul class="package-features">
                         <li>Techniektraining</li>
                         <li>Balcontrole</li>
                         <li>Passen</li>
                         <li>Schieten</li>
                     </ul>
-                    <span class="package-price">&euro;85 <sub>/ uur</sub></span><br>
                     <span class="package-extra-info">+ &euro;65 extra uur </span><br>
                     <a class="buy-package-button" href="#contact">contact op om een afspraak te boeken</a>
                 </div>
                 <div class="package-card package-2">
                     <h3>Uitgebreid</h3>
+                    <span class="prices"><span class="package-price">&euro;180 </span><sub>/ 2 uur</sub></span>
                     <ul class="package-features">
                         <li>Strategie</li>
                         <li>Verdediging</li>
                         <li><span class="package-1-addition">+ Basis</span></li>
                     </ul>
-                    <span class="package-price">&euro;180 <sub>/ 2 uur</sub></span>
                     <span class="package-extra-info"> Minimaal 2 uur </span><br>
                     <a class="buy-package-button" href="#contact">contact op om een afspraak te boeken</a>
                 </div>
                 <div class="package-card package-3">
                     <h3>Toernooi</h3>
+                    <span class="prices"><span class="package-price">&euro;500 </span><sub>/ dagdeel</sub></span>
                     <ul class="package-features">
                         <li><span class="package-1-addition">+ Basis</span></li>
                         <li><span class="package-2-addition">+ Uitgebreid</span></li>
                         <li>Inclusief een <span class="beat-the-pro">Beat The Pro</span></li>
                     </ul>
-                    <span class="package-price">&euro;500 <sub>/ dagdeel</sub></span>
                     <span class="package-extra-info"> dagdeel is 4 uur </span><br>
                     <a class="buy-package-button" href="#contact">contact op om een afspraak te boeken</a>
                 </div>
