capitalized package titles

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
             <div class="clinics-packages">
                 <div class="package-card package-1">
-                    <h3>Basis</h3>
+                    <h3>BASIS</h3>
                     <div class="prices"><span class="package-price">&euro;85 </span><br><sub>/ uur</sub></div>
                     <ul class="package-features">
                         <li>Techniektraining</li>
@@ -135,7 +135,7 @@
                 </div>
 
                 <div class="package-card package-2">
-                    <h3>Uitgebreid</h3>
+                    <h3>UITGEBREID</h3>
                     <div class="prices"><span class="package-price">&euro;180 </span><sub>/ 2 uur</sub></div>
                     <ul class="package-features">
                         <li><span class="package-1-addition">Basis</span></li>
@@ -147,7 +147,7 @@
                 </div>
                 
                 <div class="package-card package-3">
-                    <h3>Toernooi</h3>
+                    <h3>TOERNOOI</h3>
                     <div class="prices"><span class="package-price">&euro;500 </span><sub>/ dagdeel</sub></div>
                     <ul class="package-features">
                         <li><span class="package-1-addition">Basis</span></li>
