updated extra info position and styling

--- a/index.html
+++ b/index.html
@@ -123,27 +123,27 @@
             <div class="clinics-packages">
                 <div class="package-card package-1">
                     <h3>BASIS</h3>
-                    <div class="prices"><span class="package-price">&euro;85 </span><br><sub>/ uur</sub></div>
+                    <div class="prices"><span class="package-price">&euro;85 </span><sub>/ uur</sub></div>
                     <ul class="package-features">
                         <li>Techniektraining</li>
                         <li>Balcontrole</li>
                         <li>Passen</li>
                         <li>Schieten</li>
                     </ul>
-                    <span class="package-extra-info">+ &euro;65 extra uur </span><br>
-                    <a class="buy-package-button" href="#contact">contact op om een afspraak te boeken</a>
+                    <a class="buy-package-button" href="#contact">contact op om een afspraak te boeken</a><br>
+                    <span class="package-extra-info">+ &euro;65 extra uur </span>
                 </div>
 
                 <div class="package-card package-2">
                     <h3>UITGEBREID</h3>
-                    <div class="prices"><span class="package-price">&euro;180 </span><sub>/ 2 uur</sub></div>
+                    <div class="prices"><span class="package-price">&euro;180 </span><sub>/2 uur</sub></div>
                     <ul class="package-features">
                         <li><span class="package-1-addition">Basis</span></li>
                         <li>Strategie</li>
                         <li>Verdediging</li>
                     </ul>
-                    <span class="package-extra-info"> Minimaal 2 uur </span><br>
-                    <a class="buy-package-button" href="#contact">contact op om een afspraak te boeken</a>
+                    <a class="buy-package-button" href="#contact">contact op om een afspraak te boeken</a><br>
+                    <span class="package-extra-info"> Minimaal 2 uur </span>
                 </div>
                 
                 <div class="package-card package-3">
@@ -154,8 +154,8 @@
                         <li><span class="package-2-addition">Uitgebreid</span></li>
                         <li>Inclusief een <span class="beat-the-pro">Beat The Pro</span></li>
                     </ul>
-                    <span class="package-extra-info"> dagdeel is 4 uur </span><br>
-                    <a class="buy-package-button" href="#contact">contact op om een afspraak te boeken</a>
+                    <a class="buy-package-button" href="#contact">contact op om een afspraak te boeken</a><br>
+                    <span class="package-extra-info"> dagdeel is 4 uur </span>
                 </div>
             </div>
         </section>
