fixed google translate altering html issue

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <div class="clinics-packages">
                 <div class="package-card package-1">
                     <h3>BASIS</h3>
-                    <div class="prices"><span class="package-price">&euro;85 </span><sub>/ uur</sub></div>
+                    <div class="prices"><div class="package-price">&euro;85 </div><sub>/ uur</sub></div>
                     <ul class="package-features">
                         <li>Techniektraining</li>
                         <li>Balcontrole</li>
@@ -136,7 +136,7 @@
 
                 <div class="package-card package-2">
                     <h3>UITGEBREID</h3>
-                    <div class="prices"><span class="package-price">&euro;180 </span><sub>/2 uur</sub></div>
+                    <div class="prices"><div class="package-price">&euro;180 </div><sub>/ 2 uur</sub></div>
                     <ul class="package-features">
                         <li><span class="package-1-addition">Basis</span></li>
                         <li>Strategie</li>
@@ -148,7 +148,7 @@
                 
                 <div class="package-card package-3">
                     <h3>TOERNOOI</h3>
-                    <div class="prices"><span class="package-price">&euro;500 </span><sub>/ dagdeel</sub></div>
+                    <div class="prices"><div class="package-price">&euro;500 </div><sub>/ dagdeel</sub></div>
                     <ul class="package-features">
                         <li><span class="package-1-addition">Basis</span></li>
                         <li><span class="package-2-addition">Uitgebreid</span></li>
