styled additional features on package 2 and package 3 card

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     <h3>UITGEBREID</h3>
                     <div class="prices"><div class="package-price">&euro;180 </div><sub>/ 2 uur</sub></div>
                     <ul class="package-features">
-                        <li><div class="package-1-addition">Basis</div></li>
+                        <li class="package-addition"><div class="package-1-addition">Basis</div></li>
                         <li>Strategie</li>
                         <li>Verdediging</li>
                     </ul>
@@ -150,8 +150,8 @@
                     <h3>TOERNOOI</h3>
                     <div class="prices"><div class="package-price">&euro;500 </div><sub>/ dagdeel</sub></div>
                     <ul class="package-features">
-                        <li><div class="package-1-addition">Basis</div></li>
-                        <li><div class="package-2-addition">Uitgebreid</div></li>
+                        <li class="package-addition"><div class="package-1-addition">Basis</div></li>
+                        <li class="package-addition"><div class="package-2-addition">Uitgebreid</div></li>
                         <li>Inclusief een <span class="beat-the-pro">Beat The Pro</span></li>
                     </ul>
                     <a class="buy-package-button" href="#contact">contact op om een afspraak te boeken</a><br>
